--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ rich = "^13.6.0"
 isort = "^5.12.0"
 ipython = "^8.17.2"
 
+[tool.poetry.scripts]
+nfopng = "nfopng:main"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
